@@ -81,6 +81,9 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
   case-insensitive names.
 * Adding the fix for lists in RTL wikis to more skins, and fixing the image toc
 * (bug 8157) Remove redirects from Special:Unusedtemplates. Patch by WebBoy.
+* (bug 10721) Duplicate section anchors with differing case now disambiguated
+  for Internet Explorer's sake
+
 
 === API changes in 1.13 ===
 
